<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="contactsIconLabel">Contacts</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="dialerIconLabel">Dialer</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_cdma_lockedUntilPowerCycle">CDMA: Phone locked until power cycle.</string>
    <string name="callFailed_cdma_drop">CDMA: Call dropped.</string>
    <string name="callFailed_cdma_intercept">CDMA: Call intercepted.</string>
    <string name="callFailed_cdma_reorder">CDMA: reorder.</string>
    <string name="callFailed_cdma_SO_reject">CDMA: Service Option Reject.</string>
    <string name="callFailed_cdma_retryOrder">CDMA: retry order.</string>
    <string name="callFailed_cdma_accessFailure">CDMA: Access failure.</string>
    <string name="callFailed_cdma_preempted">CDMA: Preempted.</string>
    <string name="callFailed_cdma_notEmergency">Only Emergency calls are possible.</string>
    <string name="callFailed_unobtainable_number">Invalid Number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call Lost</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running\u2026</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="menu_speaker">Speaker</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_mute">Mute</string>
    <string name="menu_hold">Hold</string>
    <string name="menu_endCall">End call</string>
    <string name="menu_swapCalls">Swap calls</string>
    <string name="menu_mergeCalls">Merge calls</string>
    <string name="menu_phoneRecorder">Record</string>
    <string name="menu_addCall">Add call</string>
    <string name="menu_manageConference">Manage conference call</string>
    <string name="menu_showDialpad">Show dialpad</string>
    <string name="menu_hideDialpad">Hide dialpad</string>
    <string name="menu_answerAndHold">Hold current call\n&amp; answer</string>
    <string name="menu_answerAndEnd">End current call\n&amp; answer</string>
    <string name="ok">OK</string>
    <string name="menuButtonHint">Press Menu for call options.</string>
    <string name="menuButtonKeyboardDialHint">"Press Menu for call options  \u2022  Use keyboard to dial"</string>
    <string name="menu_answer">Answer</string>
    <string name="menu_ignore">Ignore</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending Tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace the wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="dialer_emptyListWorking">Loading\u2026</string>
    <string name="enterPin">Type PIN code to unlock SIM card.</string>
    <string name="pinUnlocked">SIM unlocked</string>
    <string name="enterNewPin">New SIM PIN code</string>
    <string name="verifyNewPin">Type new SIM PIN code again to confirm</string>
    <string name="verifyFailed">The SIM PINs you typed do not match. Please try again.</string>
    <string name="enterPuk">Type PUK code to unlock SIM card</string>
    <string name="badPuk">Incorrect PUK code!</string>
    <string name="buttonTxtContinue">Continue</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking\u2026</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting network unlock\u2026</string>
    <string name="unlock_failed">Network unlock request unsuccessful.</string>
    <string name="unlock_success">Network unlock successful.</string>
    <string name="imei">IMEI</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCB">Call barring settings</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="sum_fdn">Manage Fixed Dialing Numbers</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="auto_retry_mode_title">Auto Retry</string>
    <string name="auto_retry_mode_summary">Enable Auto Retry mode</string>
    <string name="voicemail_settings_number_label">Voicemail number</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF Tones</string>
    <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
    <string name="voicemail_settings">Voicemail settings</string>
    <string name="voicemail_provider">Voicemail service</string>
    <string name="other_settings">Other call settings</string>
<string name="video_camera_switch">Switch Camera</string>
<string name="video_view_switch">Switch View</string>
<string name="video_camera_close">Close Camera</string>
<string name="video_speaker_open">Open Speaker</string>
<string name="video_bluetooth_close">Close Bluetooth</string>
<string name="video_mute">Mute</string>
<string name="video_falldown">Voice only</string>
<string name="video_record">Record ...</string>
<string name="video_start_record_both">Start Record Both</string>
<string name="video_start_record_audio">Start Record Audio</string>
<string name="video_stop_record">Stop Record</string>
<string name="videophone_setting">VideoPhone</string>
<string name="videophone_setting_title">VideoPhone General Settings</string>
<string name="videophone_setting_summary">Set options for videophone display, layout and etc.</string>
<string name="videophone_callforward_setting_title">VideoPhone forward Settings</string>
<string name="videophone_callbarring_setting_title">VideoPhone barring Settings</string>
<string name="videophone_setting_title_static_image">Display Static Image</string>
<string name="videophone_setting_title_remote_static_image_set">Remote_Static Image Set</string>
<string name="videophone_setting_title_local_static_image_set">Local_Static Image Set</string>
<string name="videophone_setting_summary_static_image">Display staic image when remote camera closed</string>
<string name="videophone_setting_title_layout">Video screen preferences</string>
<string name="videophone_setting_title_fallback">Voice call back request</string>
<string name="videophone_setting_dialog_title_layout">Video preferences</string>
<string name="videophone_setting_dialog_title_fallback">Voice call back request</string>
<string name="videophone_setting_layout_defaultvalue">1</string>
<string name="videophone_setting_fallback_defaultvalue">1</string>
<string name="brightness">Screen Brightness</string>
<string name="camera_brightness">Camera Brightness</string>
<string name="camera_contrast">Camera Contrast</string>
	<string name="hangup_reply_message_title">Message Reject</string>
    	<string name="hangup_reply_message">Reply message Hangup</string>
	<string name="hangup_reply_message_tip">when you click Incomming UI, will auto send a message to who call you.</string>
	<string name="edit_message_content_for_hangup">Edit message content</string>
	<string name="edit_message_content_introdution">Edit message content and point special person</string>
    <string name="fast_dial">fast call</string>
    <string name="fast_dial_settings">fast call setting</string>
    <string name="fast_dial_2">2#fast call</string>
    <string name="fast_dial_3">3#fast call</string>
    <string name="fast_dial_4">4#fast call</string>
    <string name="fast_dial_5">5#fast call</string>
    <string name="fast_dial_6">6#fast call</string>
    <string name="fast_dial_7">7#fast call</string>
    <string name="fast_dial_8">8#fast call</string>
    <string name="fast_dial_9">9#fast call</string>
    <string name="sim1">SIM1</string>
    <string name="sim2">SIM2</string>
    <string name="set_ip_dailing_title">IP dialing</string>
    <string name="ip_dailing">IP numbers list</string>
    <string name="auto_send_message">Automatically send information</string>
	<string name="auto_send_message_tip">Whether to automatically send a preset message</string>
    <string name="call_vibrate_title">Vibration</string>
    <string name="call_vibrate_summary">Vibrate when answers/hangs up</string>
	<string name="sim_card_unlock">"Unlock sim card"</string>
	<string name="sim_card_lock">"lock sim card"</string>
	<string name="sim_lock_or_unlock">"lock or unlock sim card"</string>
	<string name="sim_card_lock_title">"lock sim card"</string>
	<string name="sim_card_lock_summary">"lock sim card"</string>
	<string name="sim_card_unlock_title">"unlock sim card"</string>
	<string name="sim_card_unlock_summary">"unlock sim card"</string>
</resources>