<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:phone="http://schemas.android.com/apk/res/com.android.phone"
     android:title="@string/labelGSMMore">

    <!-- Jackie -->
    <PreferenceScreen
        android:key="button_cf_expand_key"
        android:title="@string/labelCF"
		android:layout="@layout/preference_layout"
        android:persistent="false">

        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.phone"
            android:targetClass="com.android.phone.GsmUmtsCallForwardOptions"/>
    </PreferenceScreen>

	<!-- Jackie -->
    <PreferenceScreen
        android:key="button_cb_expand_key"
        android:title="@string/labelCB"
		android:layout="@layout/preference_layout"
        android:persistent="false">

        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.phone"
            android:targetClass="com.android.phone.CallBarringOptions"/>
    </PreferenceScreen>

	<!-- Jackie -->
    <PreferenceScreen
        android:key="button_more_expand_key"
        android:title="@string/additional_gsm_call_settings"
		android:layout="@layout/preference_layout"
        android:persistent="false">

        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.phone"
            android:targetClass="com.android.phone.GsmUmtsAdditionalCallOptions"/>
    </PreferenceScreen>
</PreferenceScreen>
